--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ a, a:hover, a:active, a:visited, a:focus {
   color: rgb(124, 184, 251);
 }
 
-#two {
+#two, #four {
   text-align: right;
   background-color: rgb(240, 237, 237);
 }
@@ -119,15 +119,13 @@ a, a:hover, a:active, a:visited, a:focus {
 }
 
 .overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
   transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   /*background-color: #717171;*/
 }
 
@@ -136,24 +134,21 @@ a, a:hover, a:active, a:visited, a:focus {
 }
 
 .img-wrapper:hover .app-img {
-  opacity: 0.2;
-}
-
-.overlay-text {
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
+  opacity: 0.3;
 }
 
 .overlay-text-aa {
-  color: rgb(19, 82, 0);
+  background-color: #006e1b;
+  color: white;
+  padding: 16px 32px;
+  border-radius: 3px;
 }
 
 .overlay-text-cp {
-  color: rgb(0, 247, 255);
+  background-color: hsla(200, 100%, 50%, 0.8);
+  color: white;
+  padding: 16px 32px;
+  border-radius: 3px;
 }
 
 
@@ -164,10 +159,10 @@ a, a:hover, a:active, a:visited, a:focus {
 
 .animation-element.slide-left {
   opacity: 0;
-  -moz-transition: all 500ms linear;
-  -webkit-transition: all 500ms linear;
-  -o-transition: all 500ms linear;
-  transition: all 500ms linear;
+  -moz-transition: all 550ms linear;
+  -webkit-transition: all 550ms linear;
+  -o-transition: all 550ms linear;
+  transition: all 550ms linear;
   -moz-transform: translate3d(-100px, 0px, 0px);
   -webkit-transform: translate3d(-100px, 0px, 0px);
   -o-transform: translate(-100px, 0px);
@@ -186,10 +181,10 @@ a, a:hover, a:active, a:visited, a:focus {
 
 .animation-element.slide-right {
   opacity: 0;
-  -moz-transition: all 500ms linear;
-  -webkit-transition: all 500ms linear;
-  -o-transition: all 500ms linear;
-  transition: all 500ms linear;
+  -moz-transition: all 550ms linear;
+  -webkit-transition: all 550ms linear;
+  -o-transition: all 550ms linear;
+  transition: all 550ms linear;
   -moz-transform: translate3d(100px, 0px, 0px);
   -webkit-transform: translate3d(100px, 0px, 0px);
   -o-transform: translate(100px, 0px);
