compress background image

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a, a:hover, a:active, a:visited, a:focus {
 
 #one {
   text-align: center;
-  background-image: url('mountains.png');
+  background-image: url('mountains_smaller.jpg');
   background-position: center;
   padding: 25%;
   height: 100vh;
