Fix background color of Concert Archive section.

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ a, a:hover, a:active, a:visited, a:focus {
 
 #concert-archive {
   text-align: left;
-  background-color: green;
+  background-color: #003300;
   color: white;
 }
 
